Pequenas correcciones de notacion

--- a/OptomechanicalCooling.tex
+++ b/OptomechanicalCooling.tex
@@ -203,10 +203,10 @@ momentum operators \cite{HanngiFM}. These operators are
 \ddot{f} + \nu(t)^2f=0,
 \end{equation} and is generally a complex function \cite{BrownPT}. This equation has two solutions \cite{HanngiFM} 
 \begin{equation}
-f(t) = e^{i\mu t}\phi(t), 
+f(t) = e^{i\eta t}\phi(t), 
 \end{equation}
 and its complex conjugate, where $\phi(t)$ is a periodic function of
-time with the same period as $\nu(t)$. $\mu$ is, in general, a complex
+time with the same period as $\nu(t)$. $\eta$ is, in general, a complex
 number \cite{WardFT}. The Floquet operators follow the usual
 commutation relations for creation and annihilation operators
 \begin{equation}
@@ -495,22 +495,22 @@ A_+ =& A_+^0 + A_+^c.\\
 Where $A_\pm^0$ are the values for the nondriven mechanic oscillator
 \citep{LCNooshi}
 \begin{align}
-A_-^0 =& a\frac{\kappa}{(\delta+\nu_0)^2+\kappa^2},\\
-A_+^0 =& a\frac{\kappa}{(\delta-\nu_0)^2+\kappa^2},
+A_-^0 =& a_0\frac{\kappa}{(\delta+\nu_0)^2+\kappa^2},\\
+A_+^0 =& a_0\frac{\kappa}{(\delta-\nu_0)^2+\kappa^2},
 \end{align} with 
 
 \begin{equation}
-a = \hbar^2\abs{\gamma}^2\chi_0^2 I_0(C_t),
+a_0 = \hbar^2\abs{\gamma}^2\chi_0^2 I_0(C_t),
 \end{equation}
 and $|\gamma|^2 = \gamma_+(t) \gamma_-(t)$, which is not time
 dependent at our level of approximation. The coefficients $A_\pm^c$  are corrections proportional to $C_t$
 \begin{align}
-A_-^c=& -bC_t(\frac{(\delta+\nu_0)^2\kappa+ \kappa\nu_0^2 + \kappa^3}{(-(\delta+\nu_0)^2+\kappa^2+\nu_0^2)^2+4(\delta+\nu_0)^2\kappa^2)})\\
-A_+^c=& -bC_t(\frac{(\delta-\nu_0)^2\kappa+ \kappa\nu_0^2 + \kappa^3}{(-(\delta-\nu_0)^2+\kappa^2+\nu_0^2)^2+4(\delta-\nu_0)^2\kappa^2)})
+A_-^c=& -a_cC_t(\frac{(\delta+\nu_0)^2\kappa+ \kappa\nu_0^2 + \kappa^3}{(-(\delta+\nu_0)^2+\kappa^2+\nu_0^2)^2+4(\delta+\nu_0)^2\kappa^2)})\\
+A_+^c=& -a_cC_t(\frac{(\delta-\nu_0)^2\kappa+ \kappa\nu_0^2 + \kappa^3}{(-(\delta-\nu_0)^2+\kappa^2+\nu_0^2)^2+4(\delta-\nu_0)^2\kappa^2)})
 \end{align} with
 
 \begin{equation}
-b= \hbar^2\abs{\gamma}^2\chi_0^2 J_1(C_t)\, ,
+a_c= \hbar^2\abs{\gamma}^2\chi_0^2 J_1(C_t)\, ,
 \end{equation}
 $I_0$ and $J_1$ are the modified Bessel Function of the first kind and
 the Bessel function of the first kind, respectively. They appear in
